--- a/src/main/resources/view/cards/ModuleAndGroupMiniCard.fxml
+++ b/src/main/resources/view/cards/ModuleAndGroupMiniCard.fxml
@@ -10,7 +10,7 @@
       xmlns="http://javafx.com/javafx/8" styleClass="module-group-card">
     <GridPane>
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" percentWidth="40"/>
+            <ColumnConstraints hgrow="NEVER" minWidth="10" percentWidth="40"/>
             <ColumnConstraints hgrow="NEVER" minWidth="10" percentWidth="60"/>
         </columnConstraints>
         <Label GridPane.halignment="CENTER" fx:id="moduleCode" text="\$moduleCode" styleClass="mini-pane-module-code"
