--- a/src/main/resources/view/cards/ProfessorCard.fxml
+++ b/src/main/resources/view/cards/ProfessorCard.fxml
@@ -20,13 +20,13 @@
                         <Region fx:constant="USE_PREF_SIZE"/>
                     </minWidth>
                 </Label>
-                <Label fx:id="name" text="\$first" styleClass="cell_big_label"/>
+                <Label fx:id="name" text="\$first" styleClass="cell_big_label" wrapText="true"/>
             </HBox>
-            <Label fx:id="title" styleClass="cell_medium_label" text="Professor"/>
+            <Label fx:id="title" styleClass="cell_medium_label" text="Professor" wrapText="true"/>
             <FlowPane fx:id="tags"/>
-            <Label fx:id="phone" styleClass="cell_small_label" text="\$phone"/>
-            <Label fx:id="email" styleClass="cell_small_label" text="\$email"/>
-            <Label fx:id="office" styleClass="cell_small_label" text="\$office"/>
+            <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" wrapText="true"/>
+            <Label fx:id="email" styleClass="cell_small_label" text="\$email" wrapText="true"/>
+            <Label fx:id="office" styleClass="cell_small_label" text="\$office" wrapText="true"/>
         </VBox>
     </GridPane>
 </HBox>
