--- a/src/main/resources/view/onboarding/OnboardingPrompt.fxml
+++ b/src/main/resources/view/onboarding/OnboardingPrompt.fxml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Scene?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.stage.Stage?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.stage.*?>
 
-<fx:root resizable="false" title="Prompt" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="400" maxWidth="700" minHeight="150" minWidth="500" resizable="true" title="Prompt" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
   <icons>
     <Image url="@/images/info_icon.png" />
   </icons>
@@ -23,9 +19,9 @@
       </stylesheets>
          <VBox>
             <children>
-               <StackPane prefHeight="14.0" prefWidth="530.0" styleClass="pane-with-border">
+               <StackPane prefHeight="14.0" prefWidth="530.0" style="-fx-background-color: derive(#1d1d1d, 20%); -fx-border-color: derive(#1d1d1d, 10%); -fx-border-width: 0px" VBox.vgrow="ALWAYS">
                   <children>
-                     <Label fx:id="displayMessage" styleClass="label-bright" text="Label" />
+                     <Label fx:id="displayMessage" contentDisplay="CENTER" styleClass="label-bright" text="Label" />
                   </children>
                </StackPane>
             <HBox fx:id="helpMessageContainer" alignment="CENTER" style="-fx-background-color: #383838;">
