--- a/src/main/resources/view/onboarding/OnboardingPrompt.fxml
+++ b/src/main/resources/view/onboarding/OnboardingPrompt.fxml
@@ -34,34 +34,24 @@
                            <Insets left="5.0" />
                         </HBox.margin>
                         <children>
-                            <Label fx:id="displayMessage" styleClass="label-bright" text="Label"/>
+                      <Button fx:id="yesButton" mnemonicParsing="false" onAction="#handleYes" styleClass="button" text="Yes" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="20.0" />
                         </children>
-                    </StackPane>
-                    <HBox fx:id="helpMessageContainer" alignment="CENTER" style="-fx-background-color: #383838;" VBox.vgrow="ALWAYS" maxHeight="500.0">
+                     </AnchorPane>
+                     <AnchorPane>
                         <children>
-                            <AnchorPane>
-                                <HBox.margin>
-                                    <Insets left="5.0" />
-                                </HBox.margin>
-                                <children>
-                                    <Button fx:id="yesButton" mnemonicParsing="false" onAction="#handleYes" styleClass="button" text="Yes" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="20.0" />
-                                </children>
-                            </AnchorPane>
-                            <AnchorPane>
-                                <children>
-                                    <Button fx:id="noButton" mnemonicParsing="false" onAction="#handleNo" text="No" AnchorPane.leftAnchor="20.0" AnchorPane.bottomAnchor="0.0"/>
-                                </children>
-                            </AnchorPane>
+                           <Button fx:id="noButton" mnemonicParsing="false" onAction="#handleNo" text="No" AnchorPane.leftAnchor="20.0" />
                         </children>
-                        <opaqueInsets>
-                            <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-                        </opaqueInsets>
-                        <padding>
-                            <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-                        </padding>
-                    </HBox>
-                </children>
-            </VBox>
-        </Scene>
-    </scene>
+                     </AnchorPane>
+              </children>
+              <opaqueInsets>
+                <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+              </opaqueInsets>
+              <padding>
+                <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+              </padding>
+            </HBox>
+            </children>
+         </VBox>
+    </Scene>
+  </scene>
 </fx:root>
