Update UI to wraptext

--- a/src/main/resources/view/TemporaryLessonListCard.fxml
+++ b/src/main/resources/view/TemporaryLessonListCard.fxml
@@ -24,11 +24,11 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="name" text="\$first" styleClass="cell_big_label" wrapText="true"/>
       </HBox>
-      <Label fx:id="subject" styleClass="cell_small_label" text="\$subject" />
-      <Label fx:id="date" styleClass="cell_small_label" text="\$date" />
-      <Label fx:id="time" styleClass="cell_small_label" text="\$duration" />
+      <Label fx:id="subject" styleClass="cell_small_label" text="\$subject" wrapText="true"/>
+      <Label fx:id="date" styleClass="cell_small_label" text="\$date" wrapText="true"/>
+      <Label fx:id="time" styleClass="cell_small_label" text="\$duration" wrapText="true"/>
     </VBox>
   </GridPane>
 </HBox>
