--- a/src/main/resources/view/LessonInfoPanel.fxml
+++ b/src/main/resources/view/LessonInfoPanel.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox prefHeight="400.0" prefWidth="518.0" spacing="5.0" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1">
-   <Label fx:id="name" style="-fx-text-fill: WHITE;" styleClass="cell_title_label" text="\$name" />
-   <Label fx:id="subject" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$subject" />
-   <Label fx:id="date" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$date" />
-   <Label fx:id="time" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$time" />
-   <Label fx:id="address" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$address" />
+   <Label fx:id="name" style="-fx-text-fill: WHITE;" styleClass="cell_title_label" text="\$name" wrapText="true"/>
+   <Label fx:id="subject" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$subject" wrapText="true"/>
+   <Label fx:id="date" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$date" wrapText="true"/>
+   <Label fx:id="time" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$time" wrapText="true"/>
+   <Label fx:id="address" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$address" wrapText="true"/>
    <VBox fx:id="class_list" prefHeight="200.0" prefWidth="100.0" spacing="2.0" VBox.vgrow="ALWAYS">
       <Label style="-fx-text-fill: WHITE;" styleClass="cell_big_label" text="Students:" />
       <StackPane prefHeight="150.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
