--- a/src/main/resources/view/RecurringLessonListCard.fxml
+++ b/src/main/resources/view/RecurringLessonListCard.fxml
@@ -25,18 +25,18 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
+        <Label fx:id="name" styleClass="cell_big_label" text="\$first" wrapText="true"/>
       </HBox>
-      <Label fx:id="subject" styleClass="cell_small_label" text="\$subject" />
+      <Label fx:id="subject" styleClass="cell_small_label" text="\$subject" wrapText="true"/>
       <HBox alignment="CENTER_LEFT" spacing="5">
-        <Label fx:id="recurring" styleClass="cell_small_label" text="recurring" />
-        <Label fx:id="day" styleClass="cell_small_label" text="\$day" />
+        <Label fx:id="recurring" styleClass="cell_small_label" text="recurring"/>
+        <Label fx:id="day" styleClass="cell_small_label" text="\$day"/>
             <padding>
                <Insets top="2.0" />
             </padding>
       </HBox>
-      <Label fx:id="date" styleClass="cell_small_label" text="\$date" />
-      <Label fx:id="time" styleClass="cell_small_label" text="\$duration" />
+      <Label fx:id="date" styleClass="cell_small_label" text="\$date" wrapText="true"/>
+      <Label fx:id="time" styleClass="cell_small_label" text="\$duration" wrapText="true"/>
     </VBox>
       <rowConstraints>
          <RowConstraints />
