--- a/src/main/resources/view/StudentInfoPanel.fxml
+++ b/src/main/resources/view/StudentInfoPanel.fxml
@@ -9,11 +9,11 @@
 
 <VBox prefHeight="400.0" prefWidth="518.0" spacing="5.0" VBox.vgrow="ALWAYS"
       xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
-   <Label fx:id="name" style="-fx-text-fill: WHITE;" styleClass="cell_title_label" text="\$name" />
+   <Label fx:id="name" style="-fx-text-fill: WHITE;" styleClass="cell_title_label" text="\$name" wrapText="true"/>
    <FlowPane fx:id="tags" />
-   <Label fx:id="phone" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\\$phone" />
-   <Label fx:id="address" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$address" />
-   <Label fx:id="email" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$email" />
+   <Label fx:id="phone" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\\$phone" wrapText="true"/>
+   <Label fx:id="address" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$address" wrapText="true"/>
+   <Label fx:id="email" style="-fx-text-fill: WHITE;" styleClass="cell_small_label" text="\$email" wrapText="true"/>
    <VBox fx:id="class_list" prefHeight="200.0" prefWidth="100.0" spacing="2.0" VBox.vgrow="ALWAYS">
       <Label style="-fx-text-fill: WHITE;" styleClass="cell_big_label" text="Lessons:" />
       <StackPane prefHeight="150.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
