Fix 4 bugs (3 from PE-D, 1 from previously discovered bugs)
Bugs fixed:
1. Bug: Long address gets cut-off
Fixed by: Replacing "Label" to "Text" in Profile, then adding TextFlow to wrap the texts
2.  Right click -> Delete is still functional after disabling User Input
Fixed by: Toggling right clicks and context menu before and after enabling/disabling mouseUX
3. "Invalid command format" upon pressing any button on the keyboard when you first launch the app.
Fixed by: This bug is caused by the onKeyPressed event listener sharing the same handler as onMouseClicked specified in fxml, resolved by splitting up the same handler.
4. Invalid ProfileCommand being executed when clicking on blank space in PersonListPanel
Fixed by: Specifying the onMouseClicked handler to execute only when there is a selected person/tag card.

--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -25,12 +25,12 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="name" text="\$first" styleClass="cell_big_label" textOverrun="CENTER_WORD_ELLIPSIS"/>
       </HBox>
       <FlowPane fx:id="tags" />
-      <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
-      <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
+      <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" textOverrun="CENTER_WORD_ELLIPSIS"/>
+      <Label fx:id="address" styleClass="cell_small_label" text="\$address" textOverrun="CENTER_WORD_ELLIPSIS"/>
+      <Label fx:id="email" styleClass="cell_small_label" text="\$email" textOverrun="CENTER_WORD_ELLIPSIS"/>
     </VBox>
   </GridPane>
 </HBox>
