--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -364,16 +364,10 @@
     -fx-font-size: 11;
 }
 
-.profile_big_label {
+.profile_text {
     -fx-font-family: "Segoe UI";
     -fx-font-size: 15px;
-    -fx-text-fill: white;
-}
-
-.profile_small_label {
-    -fx-font-family: "Segoe UI";
-    -fx-font-size: 15px;
-    -fx-text-fill: white;
+    -fx-fill: white
 }
 
 .profile_information_label {
