--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -366,16 +366,10 @@
     -fx-font-size: 11;
 }
 
-.profile_big_label {
+.profile_text {
     -fx-font-family: "Segoe UI";
     -fx-font-size: 15px;
-    -fx-text-fill: black;
-}
-
-.profile_small_label {
-    -fx-font-family: "Segoe UI";
-    -fx-font-size: 15px;
-    -fx-text-fill: black;
+    -fx-fill: black
 }
 
 .profile_information_label {
