--- a/src/main/resources/view/TagList.fxml
+++ b/src/main/resources/view/TagList.fxml
@@ -5,8 +5,8 @@
 
 <StackPane xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
     <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-        <ListView fx:id="tagListView" VBox.vgrow="ALWAYS" onMouseClicked="#handleSelectTag"
-                  onKeyPressed="#handleSelectTag" onContextMenuRequested="#handleTagContextMenu"/>
+        <ListView fx:id="tagListView" VBox.vgrow="ALWAYS" onMouseClicked="#handleMouseSelect"
+                  onKeyPressed="#handleKeySelect"/>
     </VBox>
 </StackPane>
 
