--- a/src/main/resources/view/MainWindowLightMode.fxml
+++ b/src/main/resources/view/MainWindowLightMode.fxml
@@ -56,7 +56,7 @@
 
                         <TabPane fx:id="tabPane" side="LEFT" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
                             <tabs>
-                                <Tab text="        ☺︎ Player">
+                                <Tab text="☺ Player">
 
                                     <GridPane fx:id="gridPane" minWidth="340.0" prefWidth="340.0" VBox.vgrow="ALWAYS">
                                         <columnConstraints>
@@ -114,7 +114,7 @@
                                     </GridPane>
                                 </Tab>
 
-                                <Tab text="  ✍︎ Schedule">
+                                <Tab text="✍ Schedule">
 
                                     <GridPane fx:id="gridPane" minWidth="340.0" prefWidth="340.0" VBox.vgrow="ALWAYS">
                                         <columnConstraints>
