--- a/src/main/resources/view/SignupWindow.fxml
+++ b/src/main/resources/view/SignupWindow.fxml
@@ -56,7 +56,7 @@
                         <padding>
                             <Insets top="5" bottom="5" />
                         </padding>
-                        <Label fx:id="responseDisplay" textAlignment="CENTER"/>
+                        <Label fx:id="responseDisplay" textAlignment="CENTER" wrapText="true"/>
                     </HBox>
                     <HBox alignment="CENTER_LEFT">
                         <ImageView fx:id="conditionImage1" fitHeight="16" fitWidth="16">
